this is nice right?

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,71 +1,21 @@
 ---
 title: Introduction
-description: 'Welcome to the home of your new documentation'
+description: Learn how to streamline management tasks with Astro Birb
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.svg"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.svg"
-  alt="Hero Dark"
-/>
-
-## Setting up
-
-The first step to world-class documentation is setting up your editing environments.
+> Welcome to Astro Birb, your ultimate tool for simplifying management tasks within your community. Whether you're managing a server, forum, or any online community, Astro Birb is designed to streamline essential administrative functions.
 
 <CardGroup cols={2}>
-  <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
+  <Card title="Website" icon="link" href="https://astrobirb.dev">
+    View our website
   </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
+  <Card title="Status" icon="signal-bars" href="https://status.astrobirb.dev">
+    Check the bots & website status
   </Card>
-</CardGroup>
-
-## Make it yours
-
-Update your docs to your brand and add valuable content for the best user conversion.
-
-<CardGroup cols={2}>
-  <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
-  >
-    Customize your docs to your company's colors and brands
+  <Card title="Support Server" icon="message-question" href="https://astrobirb.dev/support">
+    Get support from our server
   </Card>
-  <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
-  >
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/components/accordion"
-  >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
-  >
-    Check out our showcase of our favorite documentation
+  <Card title="Support Us" icon="hand-holding-dollar" href="https://ko-fi.com/astrobird">
+    Support us @ ko-fi
   </Card>
 </CardGroup>
