--- a/configuration/beginner.mdx
+++ b/configuration/beginner.mdx
@@ -5,13 +5,19 @@ description: Learn how to setup Astro Birb!
 
 
 <Steps>
-  <Step title="First Step">
-    Run `/config` and select the staff roles & admin roles, you can learn about the permissions [here](/configuration/permissions.mdx) 
+  <Step title="How to enable Modules">
+   1. Run /config.
+   2. Click on Config Menu and then go on 'Modules'
+   3. Use the Modules dropdown to select all the modules you wanna use. (You can scroll down)
+   4. The Modules should now appear in your Config Menu.
+
+
   </Step>
-  <Step title="Second Step">
-    Use `Config Menu` to find what module you want to use on the module there is a dropdown called `Module Toggle` select **True** to enabled that module.
+  <Step title="Module Configuration">
+  1. Press `Make a selection`.
+  2. Click on the required options and fill out that option
   </Step>
-  <Step title="Third Step">
-    Now do the required actions for that module.
+  <Step title="All Done">
+  It really isn't that hard.
   </Step>
 </Steps>
