--- a/configuration/permissions.mdx
+++ b/configuration/permissions.mdx
@@ -16,35 +16,27 @@ description:
 - **/staff add** - Adds a member to the staff.
 - **/staff remove** - Removes a member from the staff.
 - **/staff view** - Views the current staff members.
-- **/partnership all** - Manages all partnerships.
-- **/partnership log** - Logs a new partnership.
-- **/partnership view** - Views details of a partnership.
 - **/feedback remove** - Removes feedback from a user.
 - **/modmail blacklist** - Blacklists a user from using modmail.
 - **/modmail unblacklist** - Removes a user from the modmail blacklist.
 - **/modmail snippets create** - Creates a modmail snippet.
 - **/modmail snippets delete** - Deletes a modmail snippet.
 - **/modmail snippets all** - Shows all modmail snippets.
-- **/application results** - Logs an application result.
 - **/admin panel** - Accesses the admin panel.
 - **/loa active** - Views active LOAs.
 - **/staff panel** - Sends a display of all staff members in a dropdown.
+- **/staff list** - Sends the staff list off all the the staff members and their rank.
 
 #### Staff Role Commands
 
 - **/staff leaderboard** - Views the staff performance leaderboard.
 - **/staff messages** - Views or manages staff messages.
-- **/tags send** - Sends a tag to a user.
-- **/tags info** - Retrieves information about a specific tag.
-- **/tags list** - Lists all available tags.
 - **/modmail reply** - Replies to a modmail thread.
 - **/modmail close** - Closes a modmail thread.
 - **/modmail alert** - Sends an alert next time someone messages in the modmail.
 - **/modmail snippets send** - Sends a snippet message into the modmail channel.
 - **/loa request** - Requests a Leave of Absence.
-- **/forums lock** - Locks a forum thread.
-- **/forums unlock** - Unlocks a forum thread.
-- **/forums archive** - Archives a forum thread.
+
 
 
 <Warning>This won't be up to date</Warning>
