--- a/Modules/quota.mdx
+++ b/Modules/quota.mdx
@@ -7,7 +7,7 @@ description: Calculate how much messages your staff members has sent using Astro
 
 <Tabs>
   <Tab title="Auto Activity">
-     > This will send a weekly activity report which whill report your staffs activity in sections of `Failed`, `LOA`, `Passed`!
+     > This will send a weekly activity report which will report your staffs activity in sections of `Failed`, `LOA`, `Passed`!
   </Tab>
 
 </Tabs>
