--- a/configuration/variables.mdx
+++ b/configuration/variables.mdx
@@ -13,6 +13,7 @@ description:
 - `{author.mention}`: The mention tag of the author of the commands.
 - `{staff.name}`: The display name of the staff member involved.
 - `{staff.mention}`: The mention tag of the staff member involved.
+- `{expiration}: Shows the expiration for infractions. If there isn't one it'll return "N/A"
 
 These placeholders allow for dynamic information to be inserted into notifications, records, or communications regarding staff actions, promoting clarity and accountability within the system.
 
