--- a/Modules/quota.mdx
+++ b/Modules/quota.mdx
@@ -14,9 +14,13 @@ description: Calculate how much messages your staff members has sent using Astro
 --- 
 <AccordionGroup>
   <Accordion title="Commands">
-    - **/staff messages** - View your staff current messages
-    - **/staff messages manage** - Manage your staffs messages.
+    - **/quota messages** - View your staff current messages
+    - **/quota manage** - Manage your staffs messages.
     - **/staff leaderboard** - View a leaderboard of all your staff.
+    - **/quota reset** - Resets the messages of all staff members.
+    - **/quota export** - Exports the messages of all staff members to a CSV file.
+    - **/quota activity view** - View the activity result of your staff.
+    - **/quota activity wave** - Uses infractions to infract staff members based on their activity.
 
 
   </Accordion>
