--- a/configuration/permissions.mdx
+++ b/configuration/permissions.mdx
@@ -1,42 +1,46 @@
 ---
 title: Permissions
-description: 
+description: A comprehensive list of commands available for Admin and Staff roles.
 ---
-#### Admin Role Commands
-
-- **/infract** - Issues an infraction to a user.
-- **/infraction void** - Cancels a specific infraction.
-- **/infractions** - Views the infractions of a user.
-- **/infraction edit** - Edits an existing infraction.
-- **/suspend** - Suspends a user from the community.
-- **/promote** - Promotes a member in the staff hierarchy.
-- **/tags edit** - Edits a pre-existing tag.
-- **/tags create** - Creates a new tag.
-- **/loa manage** - Manages Leave of Absence (LOA) requests.
-- **/staff add** - Adds a member to the staff.
-- **/staff remove** - Removes a member from the staff.
-- **/staff view** - Views the current staff members.
-- **/feedback remove** - Removes feedback from a user.
-- **/modmail blacklist** - Blacklists a user from using modmail.
-- **/modmail unblacklist** - Removes a user from the modmail blacklist.
-- **/modmail snippets create** - Creates a modmail snippet.
-- **/modmail snippets delete** - Deletes a modmail snippet.
-- **/modmail snippets all** - Shows all modmail snippets.
-- **/admin panel** - Accesses the admin panel.
-- **/loa active** - Views active LOAs.
-- **/staff panel** - Sends a display of all staff members in a dropdown.
-- **/staff list** - Sends the staff list off all the the staff members and their rank.
-
-#### Staff Role Commands
-
-- **/staff leaderboard** - Views the staff performance leaderboard.
-- **/staff messages** - Views or manages staff messages.
-- **/modmail reply** - Replies to a modmail thread.
-- **/modmail close** - Closes a modmail thread.
-- **/modmail alert** - Sends an alert next time someone messages in the modmail.
-- **/modmail snippets send** - Sends a snippet message into the modmail channel.
-- **/loa request** - Requests a Leave of Absence.
 
 
+<Tabs>
+    <Tab title="Admin Role">
+        - **/infraction issue** - Issues an infraction to a user.
+        - **/infraction view** - View and manage a infraction
+        - **/infraction list** - Views the infractions of a user.
+        - **/suspend** - Suspends a user from the community.
+        - **/promote** - Promotes a member in the staff hierarchy.
+        - **/tags edit** - Edits a pre-existing tag.
+        - **/tags create** - Creates a new tag.
+        - **/loa manage** - Manages Leave of Absence (LOA) requests.
+        - **/staff add** - Adds a member to the staff.
+        - **/staff remove** - Removes a member from the staff.
+        - **/staff view** - Views staff members.
+        - **/modmail snippets create** - Creates a modmail snippet.
+        - **/modmail snippets delete** - Deletes a modmail snippet.
+        - **/modmail snippets all** - Shows all modmail snippets.
+        - **/admin panel** - Accesses the admin panel.
+        - **/loa active** - Views active LOAs.
+        - **/staff panel** - Displays all staff members in a dropdown.
+        - **/staff list** - Sends the staff list of all the staff members and their rank.
+        - **/tickets panel** - Creates a ticket panel
+        - **/quota activity view** - Views the activity result of your staff.
+        - **/quota activity wave** - Uses infractions to infract staff members based on their activity.
+        - **/quota reset** - Resets the messages of all staff members.
+        - **/quota export** - Exports the messages of all staff members to a CSV file.
+        - **/quota manage** - Manage your staffs messages.
+    </Tab>
+    <Tab title="Staff Role">
+        - **/staff leaderboard** - Views the staff performance leaderboard.
+        - **/quota messages** - Views or manages staff messages.
+        - **/modmail reply** - Replies to a modmail thread.
+        - **/modmail close** - Closes a modmail thread.
+        - **/modmail alert** - Sends an alert next time someone messages in the modmail.
+        - **/modmail snippets send** - Sends a snippet message into the modmail channel.
+        - **/loa request** - Requests a Leave of Absence.
+        
+    </Tab>
+</Tabs>
 
-<Warning>This won't be up to date</Warning>
+<Warning>This list may not be up to date.</Warning>
