--- a/Modules/infractions.mdx
+++ b/Modules/infractions.mdx
@@ -6,13 +6,16 @@ description: A practical tool for documenting staff rule violations.
 > Use 'Infractions' for tracking staff rule violations efficiently and consolidate logs in one channel.
 
 <Tabs>
-  <Tab title="Infraction Types">
+  <Tab title="Infraction Types Actions">
     | Actions | Description                           |
         | -------- | ------------------------------------- |
         | Add Role     | Add a discord role to the user they are infracting.                 |
         | Remove Role      |  Removes a discord role to the user they are infracting.                     |
         | Channel   | Sends it to a different channel from the main one. |
         | Removal From Staff Database   | Remove the user from the **Staff Database** module. |
+        | Remove From Group   | Removes peoples from roblox groups. (Requires Roblox Intergration) |
+        | Change Group Role  | Changes a users group robloxs in a group (Requires Roblox Intergration) |
+        | Void Shift  | Voids a users shift (Requires ERM Intergration) |
   </Tab>
   <Tab title="Expiration">
     Using the expiration parameter on the `/infract` command you can make infractions expire after a specified duration.
@@ -22,11 +25,9 @@ description: A practical tool for documenting staff rule violations.
 
 <AccordionGroup>
   <Accordion title="Commands">
-    - **/infract** - Issues an infraction to a user.
-    - **/infraction void** - Cancels a specific infraction.
-    - **/infractions** - Views the infractions of a user.
-    - **/infraction all** - Views all infractions in the server.
-    - **/infraction edit** - Edits an existing infraction.
+    - **/infraction issue** - Issues an infraction to a user.
+    - **/infraction view** - View and manage an infraction.
+    - **/infraction list** - Views the infractions of a user/server.
     - **/infraction multiple** - Infract multiple people at once. [[Premium Required](https://patreon.com/astrobirb)]
 
 
