--- a/configuration/variables.mdx
+++ b/configuration/variables.mdx
@@ -3,48 +3,48 @@ title: Variables
 description: 
 ---
 
-## Customisation (Promotions & Infractions)
+<Tabs>
+    <Tab title="Customisation">
+        - `{newrank}`: The new rank for the promoted user.
+        - `{notes}`: Notes related to the infraction.
+        - `{reason}`: The reason for the infraction or promotion.
+        - `{action}`: The action taken due to the infraction.
+        - `{author.name}`: The display name of the author of the commands.
+        - `{author.mention}`: The mention tag of the author of the commands.
+        - `{staff.name}`: The display name of the staff member involved.
+        - `{staff.mention}`: The mention tag of the staff member involved.
+        - `{expiration}`: Shows the expiration for infractions. If there isn't one it'll return "N/A"
 
-- `{newrank}`: The new rank for the promoted user.
-- `{notes}`: Notes related to the infraction.
-- `{reason}`: The reason for the infraction or promotion.
-- `{action}`: The action taken due to the infraction.
-- `{author.name}`: The display name of the author of the commands.
-- `{author.mention}`: The mention tag of the author of the commands.
-- `{staff.name}`: The display name of the staff member involved.
-- `{staff.mention}`: The mention tag of the staff member involved.
-- `{expiration}: Shows the expiration for infractions. If there isn't one it'll return "N/A"
-
-These placeholders allow for dynamic information to be inserted into notifications, records, or communications regarding staff actions, promoting clarity and accountability within the system.
-
-## Custom Command Variables
- 
-- `{channel.mention}`: Mentions the channel where the custom command is sent.
-- `{channel.id}`: The ID of the channel where the custom command is sent.
-- `{channel.name}`: The name of the channel where the custom command is sent.
-- `{random}`: Generates a random number.
-- `{guild.owner.mention}`: Mentions the owner of the server.
-- `{guild.owner.id}`: The ID of the server owner.
-- `{guild.owner.name}`: The name of the server owner.
-- `{guild.id}`: The ID of the server.
-- `{guild.name}`: The name of the server.
-- `{timestamp}`: The timestamp of when the command was used.
-- `{author.mention}`: Mentions the user using the command.
-- `{author.id}`: The user ID of the person using the command.
-- `{author.name}`: The name of the person using the command.
-
-## Auto Responder Variables
-
-- `{channel.mention}`: Mentions the channel where the custom command is sent.
-- `{channel.id}`: The ID of the channel where the custom command is sent.
-- `{channel.name}`: The name of the channel where the custom command is sent.
-- `{random}`: Generates a random number.
-- `{guild.owner.mention}`: Mentions the owner of the server.
-- `{guild.owner.id}`: The ID of the server owner.
-- `{guild.owner.name}`: The name of the server owner.
-- `{guild.id}`: The ID of the server.
-- `{guild.name}`: The name of the server.
-- `{timestamp}`: The timestamp of when the command was used.
-- `{author.mention}`: Mentions the user using the command.
-- `{author.id}`: The user ID of the person using the command.
-- `{author.name}`: The name of the person using the command.
+        These placeholders allow for dynamic information to be inserted into notifications, records, or communications regarding staff actions, promoting clarity and accountability within the system.
+    </Tab>
+    <Tab title="Custom Commands">
+        - `{channel.mention}`: Mentions the channel where the custom command is sent.
+        - `{channel.id}`: The ID of the channel where the custom command is sent.
+        - `{channel.name}`: The name of the channel where the custom command is sent.
+        - `{random}`: Generates a random number.
+        - `{guild.owner.mention}`: Mentions the owner of the server.
+        - `{guild.owner.id}`: The ID of the server owner.
+        - `{guild.owner.name}`: The name of the server owner.
+        - `{guild.id}`: The ID of the server.
+        - `{guild.name}`: The name of the server.
+        - `{timestamp}`: The timestamp of when the command was used.
+        - `{author.mention}`: Mentions the user using the command.
+        - `{author.id}`: The user ID of the person using the command.
+        - `{author.name}`: The name of the person using the command.
+    </Tab>
+    <Tab title="Auto Responder">
+        - `{channel.mention}`: Mentions the channel where the custom command is sent.
+        - `{channel.id}`: The ID of the channel where the custom command is sent.
+        - `{channel.name}`: The name of the channel where the custom command is sent.
+        - `{random}`: Generates a random number.
+        - `{guild.owner.mention}`: Mentions the owner of the server.
+        - `{guild.owner.id}`: The ID of the server owner.
+        - `{guild.owner.name}`: The name of the server owner.
+        - `{guild.id}`: The ID of the server.
+        - `{guild.name}`: The name of the server.
+        - `{timestamp}`: The timestamp of when the command was used.
+        - `{author.mention}`: Mentions the user using the command.
+        - `{author.id}`: The user ID of the person using the command.
+        - `{author.name}`: The name of the person using the command.
+    </Tab>
+</Tabs>
