--- a/Modules/infractions.mdx
+++ b/Modules/infractions.mdx
@@ -29,7 +29,16 @@ description: A practical tool for documenting staff rule violations.
     - **/infraction view** - View and manage an infraction.
     - **/infraction list** - Views the infractions of a user/server.
     - **/infraction multiple** - Infract multiple people at once. [[Premium Required](https://patreon.com/astrobirb)]
-
+</Tab>
+<Tab title="Infraction Variables">
+> **{notes}:** Notes related to the infraction.
+> **{reason}:** The reason for the infraction or promotion.
+> **{action}:** The action taken due to the infraction.
+> **{author.name}:** The display name of the author of the commands.
+> **{author.mention}:** The mention tag of the author of the commands.
+> **{staff.name}:** The display name of the staff member involved.
+> **{staff.mention}:** The mention tag of the staff member involved.
+> **{expiration}:** Shows the expiration for infractions. If there isn’t one it’ll return “N/A”
 
   </Accordion>
 </AccordionGroup>
