--- a/Modules/promotions.mdx
+++ b/Modules/promotions.mdx
@@ -23,6 +23,7 @@ description: Record staff members' promotions using Astro Birb.
   <Accordion title="Commands">
     - **/promote** - Promotes a member in the staff hierarchy.
     - **/promotions** - View a users past promotions.
+    - **/promotion view** - View information about a promotion.
 
 
   </Accordion>
