--- a/Modules/loa.mdx
+++ b/Modules/loa.mdx
@@ -6,10 +6,12 @@ description: Allow your staff to take a break!
 ---
 <AccordionGroup>
   <Accordion title="Commands">
-    - **/loa request** - Log a loa request.
-    - **/loa active** - View all active loa's.
-    - **/loa manage** - Manage a staff members loa.
-
+- **/loa active** - View active leave of absences.
+- **/loa admin** - Manage the Staff’s leave of Absence 
+- **/loa manage** - Manage your Leave of Absence
+- **/loa request** - Request a Leave of Absence 
+- **/loa history** - View past Leave of Absences 
+- **/loa pending** - View pending Leave of Absences 
 
   </Accordion>
 </AccordionGroup>
