--- a/Modules/feedback.mdx
+++ b/Modules/feedback.mdx
@@ -1,10 +1,16 @@
 ---
 title: Staff Feedback
-description: Let members give rating of your staff members using Astro Birb.
+description: Let members give ratings of your staff members using Astro Birb.
 ---
-> It enables you to collect feedback directly from your members, providing insights into areas of success and those requiring enhancement. This module is an essential tool for fostering a culture of continuous improvement and open communication within your team.
+> Staff Feedback enables you to collect feedback directly from your members, providing insights into areas of success and those requiring enhancement. This module is an essential tool for fostering a culture of continuous improvement and open communication within your team.
 
 ---
+
+<Tabs>
+<Tab title=Config Staff Feedback>
+**Feedback Channel:** The Feedback Channel is the channel to which feedback will be sent. 
+**Preferences:** Allow users to submit multiple feedback's on a Staff Member.
+**Customize Embed:** Customize your Staff Feedback embed.
 
 <AccordionGroup>
   <Accordion title="Commands">
