--- a/Modules/infractions.mdx
+++ b/Modules/infractions.mdx
@@ -6,19 +6,26 @@ description: A practical tool for documenting staff rule violations.
 > Use 'Infractions' for tracking staff rule violations efficiently and consolidate logs in one channel.
 
 <Tabs>
+<Tab title="Config Infractions">
+- **Infraction Channel:** The channel where the Infraction gets sent to.
+- **Audit Log Channel:** Channel where Infraction Creations/Voids/Deletions get sent to.
+- **Types:** Types of Infractions
+- **Reasons:** Preset Reasons require **Premium!**
+
+</Tab>
   <Tab title="Infraction Types Actions">
     | Actions | Description                           |
         | -------- | ------------------------------------- |
-        | Add Role     | Add a discord role to the user they are infracting.                 |
-        | Remove Role      |  Removes a discord role to the user they are infracting.                     |
+        | Add Role     | Add a Discord role to the user they are infracting.                 |
+        | Remove Role      |  Removes a Discord role from the user they are infracting.                     |
         | Channel   | Sends it to a different channel from the main one. |
         | Removal From Staff Database   | Remove the user from the **Staff Database** module. |
-        | Remove From Group   | Removes peoples from roblox groups. (Requires Roblox Intergration) |
-        | Change Group Role  | Changes a users group robloxs in a group (Requires Roblox Intergration) |
-        | Void Shift  | Voids a users shift (Requires ERM Intergration) |
+        | Remove From Group   | Removes people from Roblox groups. (Requires Roblox Integration) |
+        | Change Group Role  | Changes a user's group role in a group (Requires Roblox Integration) |
+        | Void Shift  | Voids a user's shift (Requires ERM Integration) |
   </Tab>
   <Tab title="Expiration">
-    Using the expiration parameter on the `/infract` command you can make infractions expire after a specified duration.
+    Using the expiration parameter on the `/infract` command, you can make infractions expire after a specified duration.
   </Tab>
 </Tabs>
 ---
