--- a/Modules/loa.mdx
+++ b/Modules/loa.mdx
@@ -4,6 +4,12 @@ description: Allow your staff to take a break!
 ---
 > This feature aids in monitoring members on Leave of Absence (LOA) and automatically sends notifications upon the conclusion of their specified absence period.
 ---
+
+<Tabs>
+<Tab title="Config LOA">
+**Leave of Absence Channel:** The channel where the LOA Request will get sent.
+**Leave of Absence Role:** The role users will receive upon LOA Request being approved. 
+
 <AccordionGroup>
   <Accordion title="Commands">
 - **/loa active** - View active leave of absences.
