--- a/Modules/promotions.mdx
+++ b/Modules/promotions.mdx
@@ -6,14 +6,21 @@ description: Record staff members' promotions using Astro Birb.
 > Celebrate the hard work and contributions of your staff by showcasing their achievements in the 'Promotions' module. This streamlined and effective tool provides a visible platform to honor their progress and milestones, fostering a culture of recognition and motivation.
 
 <Tabs>
+<Tab title="Config Promotions">
+- **Promotion Channel:** The channel the Promotion is sent to.
+- **System:** Choose what Promotion System you want to use.
+- **Cooldown:** Set a cooldown for promoting users.
+- **Promotion Audit Logs:** Channel where Audit Logs for Promotions will be sent. 
+
+</Tab>
   <Tab title="OG System">
-     > The OG system is based on discord roles. You can select a discord role in the `/promote` command and it'll promote them to that role with no additional actions.
+     > The OG system is based on Discord roles. You can select a Discord role in the `/promote` command, and it'll promote them to that role with no additional actions.
   </Tab>
   <Tab title="Single Hierarchy">
-     > The Single Hierarchy system is based on a single hierarchy of roles. You can promote a user to the next role in the hierarchy set in config..
+     > The Single Hierarchy system is based on a single hierarchy of roles. You can promote a user to the next role in the hierarchy set in the config menu..
   </Tab>  
    <Tab title="Multi Hierarchy">
-     > The Multi Hierarchy system is based on multiple hierarchies of roles. If you have multiple staff teams you can select a department and it'll promote them to the next role in that department.
+     > The Multi Hierarchy system is based on multiple hierarchies of roles. If you have multiple staff teams, you can select a department, and it'll promote them to the next role in that department.
   </Tab>   
 
 </Tabs>
