--- a/Modules/qotd.mdx
+++ b/Modules/qotd.mdx
@@ -3,6 +3,11 @@ title: Daily Questions
 description: Have daily questions to make your chat more active.
 ---
 
-> Daily Questions allow you to send daily questions to a channel with a ping to try and make your chat more active so basically its a chat reviver with a topic.
+<Tabs>
+<Tab title="Config Daily Questions">
+- **Channel:** Channel the QOTD is posted in. 
+- **Ping:** The role that gets pinged when the QOTD is sent. 
 
-<Warning>Currently the Daily Questions can be delayed by an Hour or even early.</Warning>
+> Daily Questions allow you to send daily questions to a channel with a ping to try and make your chat more active, so basically it's a chat reviver with a topic.
+
+<Warning>Currently, the Daily Questions can be delayed by an Hour or even earlier.</Warning>
