Documentation edits made through Mintlify web editor

--- a/Modules/loa.mdx
+++ b/Modules/loa.mdx
@@ -1,5 +1,5 @@
 ---
-title: LOA's
+title: LOA
 description: Allow your staff to take a break!
 ---
 > This feature aids in monitoring members on Leave of Absence (LOA) and automatically sends notifications upon the conclusion of their specified absence period.
