--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
-title: Introduction
-description: Learn how to streamline management tasks with Astro Birb
+title: "Introduction"
+description: "Learn how to streamline management tasks with Astro Birb"
 ---
 
 > Welcome to Astro Birb, your ultimate tool for simplifying management tasks within your community. Whether you're managing a server, forum, or any online community, Astro Birb is designed to streamline essential administrative functions.
@@ -18,4 +18,4 @@ description: Learn how to streamline management tasks with Astro Birb
   <Card title="Support Us" icon="hand-holding-dollar" href="https://ko-fi.com/astrobird">
     Support us @ ko-fi
   </Card>
-</CardGroup> 
+</CardGroup>
