--- a/Modules/qotd.mdx
+++ b/Modules/qotd.mdx
@@ -3,6 +3,18 @@ title: Daily Questions
 description: Have daily questions to make your chat more active.
 ---
 
-> Daily Questions allow you to send daily questions to a channel with a ping to try and make your chat more active so basically its a chat reviver with a topic.
+> **Question of the Day (QOTD)** automatically posts daily questions in your server to keep conversations active and engaging.
 
-<Warning>Currently the Daily Questions can be delayed by an Hour or even early.</Warning>
+<Warning>
+Daily Questions may occasionally be delayed by an hour or more.  
+We’re actively working to improve timing accuracy.
+</Warning>
+
+<AccordionGroup>
+   <Accordion title="Configuration Options">
+      - **Channel**: Where the daily question is sent  
+      - **Ping**: Role or user to notify  
+      - **Date**: Time the question is posted  
+      - **Threading**: Automatically create a discussion thread
+    </Accordion>
+</AccordionGroup>
