--- a/Modules/responder.mdx
+++ b/Modules/responder.mdx
@@ -3,4 +3,17 @@ title: Auto Responder
 description: Automatically responds to a response with a message of your choosing.
 ---
 
-> This automatically responds to set messages for example if you say `hi` and theres an auto response for that message it will respond with a set message!
+<Warning>
+This feature is only available for [Premium](https://patreon.com/astrobirb) servers.
+</Warning>
+
+> The **Auto Responder** module allows you to set up automatic replies to specific keywords or phrases in your server.
+
+<AccordionGroup>
+  <Accordion title="Configuration Options">
+    - **Trigger**: The keyword or phrase that will activate the response
+    - **Response**: The message that will be sent when the trigger is detected
+    - **Channel**: (Optional) Specify a channel where the auto-responder will be active
+    - **Cooldown**: (Optional) Set a cooldown period to prevent spam
+  </Accordion>
+</AccordionGroup>
