--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,21 +1,22 @@
 ---
-title: "Introduction"
-description: "Learn how to streamline management tasks with Astro Birb"
+title: Introduction
+description: Learn how to streamline management tasks with Astro Birb
 ---
 
-> Welcome to Astro Birb, your ultimate tool for simplifying management tasks within your community. Whether you're managing a server, forum, or any online community, Astro Birb is designed to streamline essential administrative functions.
+> **Astro Birb** is a Discord management bot built to simplify staff operations, moderation workflows, and automation for growing communities.
 
-<CardGroup cols={2}>
-  <Card title="Website" icon="link" href="https://astrobirb.dev">
-    View our website
-  </Card>
-  <Card title="Status" icon="signal-bars" href="https://status.astrobirb.dev">
-    Check the bots & website status
-  </Card>
-  <Card title="Support Server" icon="message-question" href="https://astrobirb.dev/support">
-    Get support from our server
-  </Card>
-  <Card title="Support Us" icon="hand-holding-dollar" href="https://ko-fi.com/astrobird">
-    Support us @ ko-fi
-  </Card>
-</CardGroup>
+Astro Birb helps server owners and administrators stay organized by centralizing tools like infractions, promotions, leave of absence tracking, feedback collection, and more!
+
+### What you can do with Astro Birb
+
+- Manage staff infractions with approval flows and custom actions
+- Track promotions, quotas, and staff performance
+- Allow staff to request LOAs without losing permissions
+- Collect structured feedback from your community
+- Automate routine moderation and management tasks
+
+### Get started
+
+If you're new to Astro Birb, we recommend you to read through each section of the documentation to familiarize yourself with its features and capabilities.
+
+Additionally, you can join our [support server](https://discord.gg/astrobirb) for help, updates, and community discussions. You can also help us by [reporting bugs](bughunting.mdx) or suggesting new features on our [GitHub repository](https://github.com/bugsbirb/birb).
