--- a/Modules/suggestions.mdx
+++ b/Modules/suggestions.mdx
@@ -1,15 +1,20 @@
 ---
 title: Suggestions
-description: Get suggestions from server members to see what improvements you can make for your server.
+description: Collect suggestions from server members to improve your community.
 ---
 
-> The Suggestions module serves as the hub for receiving valuable server feedback and innovative ideas, providing a platform for the continuous flow of suggestions.
+> The **Suggestions** module allows server members to submit ideas and feedback, helping you identify areas for improvement and new features for your server.
 
----
+## Options
+
+- **Suggestions Channel**  
+  The channel where all submitted suggestions are posted.
 
 <AccordionGroup>
   <Accordion title="Commands">
-    - **/suggest** - Send a suggestion.
-
+    - **/suggest**: Submit a suggestion  
+      
+      **Usage:**  
+      `/suggest [suggestion] [image]`
   </Accordion>
 </AccordionGroup>
