--- a/Modules/suggestions.mdx
+++ b/Modules/suggestions.mdx
@@ -1,20 +1,15 @@
 ---
 title: Suggestions
-description: Collect suggestions from server members to improve your community.
+description: Get suggestions from server members to see what improvements you can make for your server.
 ---
 
-> The **Suggestions** module allows server members to submit ideas and feedback, helping you identify areas for improvement and new features for your server.
+> The Suggestions module serves as the hub for receiving valuable server feedback and innovative ideas, providing a platform for the continuous flow of suggestions.
 
-## Options
-
-- **Suggestions Channel**  
-  The channel where all submitted suggestions are posted.
+---
 
 <AccordionGroup>
   <Accordion title="Commands">
-    - **/suggest**: Submit a suggestion  
-      
-      **Usage:**  
-      `/suggest [suggestion] [image]`
+    - **/suggest** - Send a suggestion.
+
   </Accordion>
 </AccordionGroup>
