--- a/bughunting.mdx
+++ b/bughunting.mdx
@@ -2,31 +2,32 @@
 title: Bug Hunting Program
 description: This is how you join the bug hunting program!
 ---
-
 > Join our Bug Hunting Program by identifying and reporting issues you encounter while using the bot. Not only will you help improve our services, but you'll also receive recognition for your efforts.
 
-## How to Participate
-
-You need to be actively using the bot in order to find bugs. As you use Astro Birb, check for any unexpected behavior, glitches, or errors.
-When you find a bug, report it in our Discord server with detailed information and steps to reproduce the issue.
-Once your report is verified by our team, you'll be rewarded based on the number of valid bugs you report:
+<Steps>
+  <Step title="First Step">
+    Use the bot actively in different scenarios.
+  </Step>
+  <Step title="Second Step">
+    Report any bugs or issues you find with detailed descriptions and steps to reproduce.
+  </Step>
+  <Step title="Third Step">
+    Upon verifying the bugs, you'll be able to collect a **Bug Hunter** role!
+  </Step>
+</Steps>
 
 <AccordionGroup>
   <Accordion title="Tier 1 | Bug Hunter">
     **Challenge:** Find 2 bugs with the bot to earn a **special Bug Hunter role!**
 
-    ![Bug Hunter](images/bugs_hunter.png)
+
   </Accordion>
 
   <Accordion title="Tier 2 | Bug Squasher">
     **Challenge:** Find 4 bugs with the bot to earn a **special Bug Squasher role!**
-
-    ![Bug Squasher](images/bugs_squasher.png)
   </Accordion>
 
   <Accordion title="Tier 3 | Bug Exterminator">
     **Challenge:** Find 4 bugs with the bot to earn a **special Bug Exterminator role!**
-
-    ![Bug Exterminator](images/bugs_exterminator.png)
   </Accordion>
 </AccordionGroup>
